<!--
  ~ Copyright (c) 2022. This app and its source code is property of Otema technologies and is distributed for use by its clients on a use as is basis.
  ~ All rights are reserved by Otema technologies. It is therefore illegal to modify, copy or use any part of this system or its source code for any purpose different from that intended by the developer.
  ~ The dependencies used in the process of building this system and copyrights of their respective developers and are distributed with this system on the basis of each of those copyrights.
  -->

<resources>
    <string name="app_name">My Dairy Farm Manager</string>
    <string name="get_started">Get Started</string>
    <string name="random_text">placeholder for description</string>
    <string name="welcome">Welcome</string>
    <string name="app_logo">App Logo</string>
    <string name="previous">Previous</string>
    <string name="third">Third</string>
    <string name="second">Second</string>
    <string name="first">First</string>
    <string name="next">Next</string>
    <string name="designer">Powered By Otema Technologies</string>
    <string name="welcome_text">Welcome</string>
    <string name="welcome_decsr">Welcome to your Dairy Farm Manager</string>
    <string name="asset_management_text">Farm Asset Management</string>
    <string name="asset_management_descr">You can quickly and easily add,monitor and manage your farm assets</string>
    <string name="partner_title">Staff Monitoring</string>
    <string name="partner_text">My farm manager makes it easy to manage your staffs</string>
    <string name="payment_title">Finance management</string>
    <string name="payment_descr">Easily view and asses your expenditures and incomes using aesthetically designed charts and tables.</string>
</resources>